<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_personal_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="co.edu.udea.compumovil.gr08_20171.lab1.activity.PersonalInfo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_person_black_24dp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_nombres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_nombres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nombres"
                android:inputType="textPersonName|textCapWords|textNoSuggestions"
                android:imeOptions="actionNext"
                />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_person_add_black_24dp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_apellidos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_apellidos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/apellidos"
                android:inputType="textPersonName|textCapWords|textNoSuggestions"
                android:imeOptions="actionNext"/>

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_people_black_24dp" />


        <TextView
            android:id="@+id/tvSexo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/sexo" />

        <RadioGroup
            android:id="@+id/rgSexo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbHombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hombre"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/rbMujer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mujer" />
        </RadioGroup>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_today_black_24dp" />

        <TextView
            android:id="@+id/tvFechaNaci"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fechaNaci" />

        <Button
            android:id="@+id/btnFecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cambiar"
            android:onClick="showDatePicker"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_school_black_24dp" />


        <Spinner
            android:id="@+id/sprGradoEscolaridad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/listaGradosEscolaridad" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="end">

        <Button
            android:id="@+id/btnSiguiente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/siguiente"
            android:onClick="showNextActivity"/>


    </LinearLayout>

</LinearLayout>
