<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_contact_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="co.edu.udea.compumovil.gr08_20171.lab1.activity.ContactInfo">


    <android.support.design.widget.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/telefonoInfoContact"
            android:layout_width="367dp"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_phone_black_24px"
            android:drawablePadding="10dip"
            android:hint="@string/telefono"
            android:inputType="phone"
            android:digits="0123456789 "
            android:imeOptions="actionNext"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/correoInfoContact"
            android:layout_width="396dp"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_email_black_24px"
            android:drawablePadding="10dip"
            android:hint="@string/correo"
            android:inputType="textEmailAddress"
            android:digits="abcdefghijklmnopqrstuvwxyz@."
            android:imeOptions="actionNext"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/AutoCompletePaises"
            android:layout_width="404dp"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_public_black_24px"
            android:drawablePadding="10dip"
            android:hint="@string/pais"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
            android:maxLines="1"
            android:imeOptions="actionNext"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/AutoCompleteCiudades"
            android:layout_width="404dp"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_location_city_black_24px"
            android:drawablePadding="10dip"
            android:hint="@string/ciudad"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
            android:maxLines="1"
            android:imeOptions="actionNext"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/direccionInfoContact"
            android:layout_width="396dp"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_call_split_black_24px"
            android:drawablePadding="10dip"
            android:hint="@string/direccion"
            android:inputType="textNoSuggestions"
            android:imeOptions="actionNext"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:text="@string/siguiente"
        android:layout_width="168dp"
        android:layout_height="wrap_content"
        android:id="@+id/SiguienteInfoContact"
        android:layout_gravity="end"
        android:onClick="showNextActivity"/>

</LinearLayout>
