<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_other_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="co.edu.udea.compumovil.gr08_20171.lab1.activity.OtherInfo">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pasatiempos"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/chkLeer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/leer"
            android:layout_gravity="center"
            android:layout_weight="1"/>

        <RatingBar
            android:id="@+id/ratBarLeer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:isIndicator="true"
            android:rating="0"
            android:stepSize="1"
            style="@android:style/Widget.Holo.RatingBar.Indicator"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/chkVerTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/verTv"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:checked="true"/>

        <RatingBar
            android:id="@+id/ratBarVerTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:isIndicator="true"
            android:rating="5"
            android:stepSize="1"
            style="@android:style/Widget.Holo.RatingBar.Indicator"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/chkBailar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/bailar"
            android:layout_gravity="center"
            android:layout_weight="1"/>

        <RatingBar
            android:id="@+id/ratBarBailar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:isIndicator="true"
            android:rating="0"
            android:stepSize="1"
            style="@android:style/Widget.Holo.RatingBar.Indicator"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/chkCantar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cantar"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:checked="true"/>

        <RatingBar
            android:id="@+id/ratBarCantar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:isIndicator="true"
            android:rating="3"
            android:stepSize="1"
            style="@android:style/Widget.Holo.RatingBar.Indicator"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/chkNadar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/nadar"
            android:layout_gravity="center"
            android:layout_weight="1"/>

        <RatingBar
            android:id="@+id/ratBarNadar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:isIndicator="true"
            android:rating="0"
            android:stepSize="1"
            style="@android:style/Widget.Holo.RatingBar.Indicator"/>

    </LinearLayout>

    <Button
        android:id="@+id/btnMostrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mostrar"
        android:layout_gravity="right"
        android:onClick="mostrarInformacion"/>

    <TextView
        android:id="@+id/tvResumen"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
